--- a/source/assets/styles/circle-of-fifths.scss
+++ b/source/assets/styles/circle-of-fifths.scss
@@ -127,6 +127,7 @@
     // }
     fieldset{
         position: relative;
+        pointer-events: auto;
         z-index: 1;
         margin:0;
         // border-radius: 0;
